fix(sidebar): fix content visible when sidebar is opened

--- a/scss/layout/_sidebar.scss
+++ b/scss/layout/_sidebar.scss
@@ -1,4 +1,5 @@
 .sidebar {
+  z-index: 100;
   display: none;
   &--opened {
     @media #{$lg} {
